글쓰기 부터 하면됨